test/testdata/string/escape_hex_invalid_hex_digit_error.lox
// syntaxerror
// error: invalid hex digit in escape sequence
// lint error: invalid hex digit in escape sequence
// error: invalid hex digit in escape sequence
// lint error: invalid hex digit in escape sequence
print "\x66\x6Z\xzf";
